--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "css-loader": "^6.7.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "node-sass": "^8.0.0",
         "sass": "^1.54.4",
-        "sass-loader": "^13.0.2",
+        "sass-loader": "^13.2.0",
         "style-loader": "^3.3.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
