--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --mode development --open --hot",
+        "dev": "webpack-dev-server --mode development --open --hot",
         "build": "webpack --mode production"
     },
     "keywords": [],
@@ -13,14 +13,18 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.36.1"
+        "react-hook-form": "^7.36.1",
+        "react-router-dom": "^6.20.1"
     },
     "devDependencies": {
         "@babel/core": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
         "@babel/preset-react": "^7.18.6",
+        "antd": "^5.11.5",
+        "axios": "^1.6.2",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
+        "dotenv-webpack": "^8.0.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "node-sass": "^8.0.0",
