--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "dependencies": {
         "dayjs": "^1.11.10",
+        "exceljs": "^4.4.0",
+        "filesaver.js": "^1.3.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.36.1",
